# hypocalcemia_prediction

./: .gitignore  README.md  Thyroid_Sx_research_(ReadyToClean).csv  Thyroid_Sx_research_(mock).csv  _analysis_dev.py  _build_notebook.py  _eda.py  _manuscript_text.txt  _sota_metrics.py  _test_sota.py  _updated_manuscript.txt  model_analysis.ipynb  model_analysis_mockdata.ipynb  out_fast.txt  pyproject.toml
